# Durtles

./: .gitignore  LICENSE  README.md  activate_venv.sh  requirments.txt  setup.cfg
scripts/: count_folders.py  countfolders.py  global_.py  rename.py  spell_checker.py  spellchecker.py
src/: __main__.py  arg_parser.py  colors.py  config.py  count.py  count_folders.py  global_.py  help_menu.py  main.py  rename.py  spell_checker.py  utils.py
src/durtles/: arg_parser.py  main.py  spell_checker.py
src/parse/: command.py  constants.py  error.py  mod_option.py  operations.py  option.py  parse.py  parse_option.py  preprocess.py  process.py
src/parser/: command.py  constants.py  option.py  preprocess.py
src/utils/: colors.py  config.py
