[metadata]
name = durtles-package-VictorAndres
version = 0.0.1
author = Victor Andres Pineda
author_email = pinedavictor095@gmail.com
description = Directory utilities that automate time-consuming tasks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PinedaVictor/Durtles
project_urls =
    Bug Tracker = https://github.com/PinedaVictor/Durtles/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src